--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--title-->
     <title>Pasteleria</title>
-    <meta name="description=" content="Lucia Navas Pastelería ofrece tortas, tartas y especialidades de reposteria de alta calidad.">
-    <meta name="keywords" content="reposteria, tortas, tartas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate">
+    <!--meta-->
+    <meta name="description="
+        content="Lucia Navas Pastelería ofrece tortas, tartas y especialidades de reposteria de alta calidad.">
+    <meta name="keywords"
+        content="reposteria, tortas, tartas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate">
+    <!--link de boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css" />
+
+    <!--link de google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
+    <!--favicon-->
     <link rel="shortcut icon" href="img/logo.ico">
+    <!--link de css-->
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
@@ -146,7 +155,7 @@
             </div>
         </div>
     </footer>
-
+<!--script de boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
