--- a/pages/tartas.html
+++ b/pages/tartas.html
@@ -5,16 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--link de boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css" />
+    <!--link de google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
+    <!--title-->
     <title>Tartas</title>
+    <!--meta-->
     <meta name="description=" content="Venta de tartas dulces con ingredientes frescos y de calidad.">
-    <meta name="keywords" content="reposteria, tartas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate, coco, pasta frolla, alfajores, nuez">
+    <meta name="keywords"
+        content="reposteria, tartas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate, coco, pasta frolla, alfajores, nuez">
+    <!--favicon-->
     <link rel="shortcut icon" href="../img/logo.ico">
+    <!--link de css-->
+    <link rel="stylesheet" href="../css/styles.css" />
+
 </head>
 
 <body>
@@ -31,13 +39,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="tortas.html">Tortas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tartas.html">Tartas</a>
+                            <a class="nav-link active" href="tartas.html">Tartas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pequenas-tentaciones.html">Pequeñas Tentaciones</a>
@@ -168,6 +176,7 @@
             </div>
         </div>
     </footer>
+    <!--script de boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
