--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -5,15 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">   
-    <link rel="stylesheet" href="../css/styles.css " />
+    <!--link de boostrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <!--link de google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
+    <!--title-->
     <title>Tortas</title>
+    <!--meta-->
     <meta name="description=" content="Venta de tortas con ingredientes de la mejor calidad">
-    <meta name="keywords" content="reposteria, tortas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate, cumpleaños, fiesta, frutillas, maracuya">
+    <meta name="keywords"
+        content="reposteria, tortas, dulces, eventos, mesa dulce, crema, dulce de leche, chocolate, cumpleaños, fiesta, frutillas, maracuya">
+    <!--favicon-->
     <link rel="shortcut icon" href="../img/logo.ico">
+    <!--link de css-->
+    <link rel="stylesheet" href="../css/styles.css " />
 </head>
 
 <body>
@@ -30,10 +39,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tortas.html">Tortas</a>
+                            <a class="nav-link active" href="tortas.html">Tortas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="tartas.html">Tartas</a>
@@ -56,7 +65,7 @@
     <main>
         <div class="container-fluid row  padre-cards">
 
-        <!--chaja-->
+            <!--chaja-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
                     <img class="torta" src="../img/chaja-entera.webp" alt="torta chaja">
@@ -68,7 +77,7 @@
                 </div>
             </div>
 
-        <!--cheesecake-->    
+            <!--cheesecake-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
                     <img class="torta" src="../img/cheesecake-zoom.webp" alt="cheesecake">
@@ -80,7 +89,7 @@
                 </div>
             </div>
 
-        <!--marquise--> 
+            <!--marquise-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
                     <img class="torta" src="../img/marquise-arriba.webp" alt="torta marquise">
@@ -91,8 +100,8 @@
                     <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
             </div>
-        
-        <!--concorde--> 
+
+            <!--concorde-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
                     <img class="torta" src="../img/concorde-zoom.webp" alt="torta concorde">
@@ -104,7 +113,7 @@
                 </div>
             </div>
 
-        <!--milhojas--> 
+            <!--milhojas-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
                     <img class="torta" src="../img/milhojas-entera.webp" alt="torta milhojas">
@@ -116,7 +125,7 @@
                 </div>
             </div>
 
-        <!--pavlova-->     
+            <!--pavlova-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
                     <img class="torta" src="../img/pavlova-entera.webp" alt="torta pavlova">
@@ -128,7 +137,7 @@
                 </div>
             </div>
 
-        <!--tiramisu--> 
+            <!--tiramisu-->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card">
                     <img class="torta" src="../img/tiramisu-zoom.webp" alt="tiramisu">
@@ -138,7 +147,7 @@
                     </div>
                     <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
                 </div>
-            </div>        
+            </div>
     </main>
 
     <footer>
@@ -176,9 +185,10 @@
             </div>
         </div>
     </footer>
+    <!--script de boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
