--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -63,91 +63,9 @@
         <h1>TORTAS</h1>
     </section>
     <main>
-        <div class="container-fluid row  padre-cards">
+        <div class="container-fluid row  padre-cards js-padre-cards">
 
-            <!--chaja-->
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="torta" src="../img/chaja-entera.webp" alt="torta chaja">
-                    <div class="descripción-producto">
-                        <p class="nombre-producto">Chajá</p>
-                        <p class="precio-producto">$ 8000</p>
-                    </div>
-                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
-                </div>
-            </div>
-
-            <!--cheesecake-->
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="torta" src="../img/cheesecake-zoom.webp" alt="cheesecake">
-                    <div class="descripción-producto">
-                        <p class="nombre-producto">Cheesecake</p>
-                        <p class="precio-producto">$ 7500</p>
-                    </div>
-                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
-                </div>
-            </div>
-
-            <!--marquise-->
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="torta" src="../img/marquise-arriba.webp" alt="torta marquise">
-                    <div class="descripción-producto">
-                        <p class="nombre-producto">Marquise</p>
-                        <p class="precio-producto">$ 4500</p>
-                    </div>
-                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
-                </div>
-            </div>
-
-            <!--concorde-->
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="torta" src="../img/concorde-zoom.webp" alt="torta concorde">
-                    <div class="descripción-producto">
-                        <p class="nombre-producto">Concorde</p>
-                        <p class="precio-producto">$ 4000</p>
-                    </div>
-                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
-                </div>
-            </div>
-
-            <!--milhojas-->
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="torta" src="../img/milhojas-entera.webp" alt="torta milhojas">
-                    <div class="descripción-producto">
-                        <p class="nombre-producto">Milhojas</p>
-                        <p class="precio-producto">$ 5000</p>
-                    </div>
-                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
-                </div>
-            </div>
-
-            <!--pavlova-->
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="torta" src="../img/pavlova-entera.webp" alt="torta pavlova">
-                    <div class="descripción-producto">
-                        <p class="nombre-producto">Pavlova</p>
-                        <p class="precio-producto">$ 5000</p>
-                    </div>
-                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
-                </div>
-            </div>
-
-            <!--tiramisu-->
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img class="torta" src="../img/tiramisu-zoom.webp" alt="tiramisu">
-                    <div class="descripción-producto">
-                        <p class="nombre-producto">Tiramisu</p>
-                        <p class="precio-producto">$ 7000</p>
-                    </div>
-                    <button class="agregar-al-carrito">AGREGAR AL CARRITO</button>
-                </div>
-            </div>
+    
     </main>
 
     <footer>
@@ -189,6 +107,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <!--Script de Javascript-->
+    <script src="scripts/tortas.js"></script>
 </body>
 
 </html>
